# RuSPE

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  cspell.config.yaml  pyproject.toml  requirements.txt  rust-toolchain.toml  rustfmt.toml  tasks.py
boards/musca_b1/secure/: Cargo.toml  build.rs  layout.ld  tasks.py
boards/musca_b1/secure/.cargo/: config.toml
boards/musca_b1/secure/src/: io.rs  main.rs  mpc.rs  spcb.rs  startup.rs
boards/musca_b1/test_nspe/: Cargo.toml  build.py  build.rs  layout.ld
boards/musca_b1/test_nspe/src/: io.rs  main.rs
boards/musca_b1/tock/kernel/: Cargo.toml  build.py  build.rs  layout_non_secure.ld
boards/musca_b1/tock/kernel/.cargo/: config.toml
boards/musca_b1/tock/kernel/src/: io.rs  main.rs
boards/psc3m5_evk/: Cargo.toml  Makefile  README.md  build.rs  common_tasks.py  layout.ld  layout_non_secure.ld  layout_secure.ld  tasks.py
boards/psc3m5_evk/.cargo/: config.toml
boards/psc3m5_evk/secure/: Cargo.toml  README.md  build.rs  layout.ld  mem-conf.md  tasks.py
boards/psc3m5_evk/secure/.cargo/: config.toml
boards/psc3m5_evk/secure/edgeprotecttools/ns_policy/: policy_oem_provisioning.json  policy_oem_provisioning.json.license
boards/psc3m5_evk/secure/src/: io.rs  main.rs  startup.rs
boards/psc3m5_evk/secure_ipc/: Cargo.toml  build.rs  layout.ld  mem-conf.md  service_catalog.py  tasks.py
boards/psc3m5_evk/secure_ipc/.cargo/: config.toml
boards/psc3m5_evk/secure_ipc/src/: io.rs  main.rs  startup.rs  svc.rs
boards/psc3m5_evk/services/attest_srv/: Cargo.toml  build.py  build.rs  tasks.py
boards/psc3m5_evk/services/attest_srv/.cargo/: config.toml
boards/psc3m5_evk/services/attest_srv/src/: main.rs
boards/psc3m5_evk/services/crypto_srv/: Cargo.toml  build.py  tasks.py
boards/psc3m5_evk/services/crypto_srv/src/: main.rs
boards/psc3m5_evk/src/: io.rs  main.rs
boards/psc3m5_evk/test/: Cargo.toml  tasks.py
boards/psc3m5_evk/test/src/: io.rs
boards/psc3m5_evk/test_nspe/: Cargo.toml  build.py  build.rs  layout.ld  tasks.py
boards/psc3m5_evk/test_nspe/.cargo/: config.toml
boards/psc3m5_evk/test_nspe/src/: io.rs  main.rs
boards/psc3m5_evk/tock/app/: Cargo.toml  build.py  build.rs  tasks.py
boards/psc3m5_evk/tock/app/src/: main.rs
boards/psc3m5_evk/tock/kernel/: Cargo.toml  README.md  build.py  build.rs  layout_non_secure.ld  tasks.py
boards/psc3m5_evk/tock/kernel/.cargo/: config.toml
boards/psc3m5_evk_secure/: Cargo.toml  Makefile  README.md  build.rs  layout.ld  mem-conf.md  secure_layout.ld  tasks.py
boards/psc3m5_evk_secure/.cargo/: config.toml
boards/psc3m5_evk_secure/edgeprotecttools/: .gitignore
boards/psc3m5_evk_secure/edgeprotecttools/ns_policy/: policy_oem_provisioning.json
boards/psc3m5_evk_secure/src/: io.rs  main.rs  platform.rs  security.rs  services.rs  startup.rs
boards/shared/test_nspe/: Cargo.toml
boards/shared/test_nspe/src/: lib.rs
boards/tock/psa_tock_app/: Cargo.toml  tasks.py
boards/tock/psa_tock_app/.cargo/: config.toml
boards/tock/psa_tock_app/src/: main.rs  spe_driver.rs
boards/tock/psc3m5_evk_tock/: Cargo.toml  layout_non_secure.ld  tasks.py
boards/tock/psc3m5_evk_tock/.cargo/: config.toml
boards/tock/psc3m5_evk_tock/src/: io.rs  main.rs  spe_adapter.rs
chips/infineon/: Cargo.toml
chips/infineon/src/: lib.rs
chips/musca_b1/: Cargo.toml
chips/musca_b1/src/: lib.rs  mpc.rs  platform.rs  spcb.rs  uart.rs
chips/musca_b1/src/services/: attest.rs  crypto.rs  mod.rs
chips/psc3/: Cargo.toml
chips/psc3/src/: cmse.rs  cryptolite.rs  efuse.rs  lib.rs  platform.rs  ppc.rs  security.rs
chips/psc3/src/services/: attest.rs  crypto.rs  mod.rs
integrations/tock/tock_interrupt_test_app/: Cargo.toml  build.py
integrations/tock/tock_interrupt_test_app/.cargo/: config.toml
integrations/tock/tock_interrupt_test_app/src/: main.rs
integrations/tock/tock_psa_app/: Cargo.toml  build.py
integrations/tock/tock_psa_app/src/: main.rs  spe_driver.rs
integrations/tock/tock_spe_adapter/: Cargo.toml
integrations/tock/tock_spe_adapter/src/: lib.rs
libraries/cortex_m/: Cargo.toml
libraries/cortex_m/src/: cmse.rs  lib.rs  mpu.rs  nvic.rs  register.rs  sau.rs
libraries/cose/: Cargo.toml
libraries/cose/src/: cose_sign1.rs  cose_sign1_test.rs  lib.rs
libraries/spe/: Cargo.toml
libraries/spe/.cargo/: config.toml
libraries/spe/psa-token/: constants  main.go
libraries/spe/src/: cose.rs  lib.rs  psa_interface.rs  service.rs  static_init.rs  veneers.rs
libraries/spe/src/attest/: attest_service.rs  cose_token.rs  mod.rs  psa_token.rs
libraries/spe/src/crypto/: crypto_service.rs
libraries/spe/src/hil/: flash.rs  mod.rs
libraries/spe/src/libs/: cose_sign1.rs  mod.rs  mutex.rs  once_lock.rs
libraries/spe/src/psa/: iovec.rs  mod.rs  psa_api.rs  psa_call.rs  psa_iovec_api.rs
libraries/spe/src/spm/: mod.rs  spm.rs
libraries/spe/tests/: cose_test.rs
spe/psa_interface/: Cargo.toml  test.rs
spe/psa_interface/src/: interface_trait.rs  lib.rs  psa_api.rs  status.rs  types.rs
spe/psa_veneer_client/: Cargo.toml  README.md
spe/psa_veneer_client/src/: lib.rs  veneer_client.rs
spe/spe/: .gitignore  Cargo.toml  README.md
spe/spe/psa-token/: go.mod  go.sum
spe/spe/src/: faults.rs  lib.rs  mpu.rs  service.rs  spm_api.rs  startup.rs  svc.rs  svc_handler.rs  veneers.rs
spe/spe/src/attest/: attest_service.rs  psa_token.rs
spe/spe/src/crypto/: crypto_service.rs  mod.rs
spe/spe/src/hil/: flash.rs  mod.rs  serial.rs
spe/spe/src/internal_trusted_storage/: its_service.rs  mod.rs
spe/spe/src/libs/: cose_sign1.rs  mod.rs  mutex.rs  once_lock.rs
spe/spe/src/psa/: mod.rs  psa_api.rs  psa_call.rs  psa_iovec_api.rs  psa_svc_api.rs
spe/spe/src/spm/: mod.rs  spm.rs  spm_fn.rs  spm_ipc.rs
spe/spe/src/spm/spm_ipc/: mod.rs  (+4 more)
spe/spe/src/spm_api/: api.rs  connection.rs  mod.rs  svc.rs
spe/spe_services/: Cargo.toml
spe/spe_services/src/: lib.rs
spe/spe_services/src/attest/: attest_service.rs  attest_service_test.rs  mod.rs  psa_token.rs  psa_token_test.rs
spe/spe_services/src/crypto/: crypto_service.rs  mod.rs
(+101 files in other folders)
