# SPDX-FileCopyrightText: Infineon Technologies AG
#
# SPDX-License-Identifier: MIT

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Niklas Sirch"]

[workspace]
members = [
    "chips/infineon",
    "chips/musca_b1",
    "libraries/helpers",
    "libraries/cose",
    "libraries/cortex_m",
    "spe/psa_interface",
    "spe/psa_veneer_client",
    "spe/spe",
    "spe/spe_services",
    "boards/psc3m5_evk/secure",
    "boards/psc3m5_evk/secure_ipc",
    "boards/psc3m5_evk/test_nspe",
    "boards/psc3m5_evk/tock/kernel",
    "integrations/tock/tock_psa_app",
    "integrations/tock/tock_interrupt_test_app",
    "integrations/tock/tock_spe_adapter",
    "boards/psc3m5_evk/services/*_srv",
    "boards/musca_b1/secure",
    "boards/musca_b1/test_nspe",
    # "boards/musca_b1/tock/kernel",
    "boards/shared/test_nspe",
]
exclude = ["integrations/tock/tock-sub"]
resolver = "3"

[profile.dev]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[profile.test]
lto = false
opt-level = 0

[profile.release]
panic = "abort"
lto = true
opt-level = 3
debug = true
codegen-units = 1

[workspace.lints.rust]
# Unsupported for thumbv8m
asm_sub_register = "allow"

[workspace.lints.clippy]
# RESTRICTION LINTS
restriction = { level = "allow", priority = -1 }
allow_attributes_without_reason = "deny"
absolute-paths = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

# COMPLEXITY LINTS
complexity = { level = "deny", priority = -1 }

# STYLE
style = { level = "deny", priority = -1 }
missing_safety_doc = "deny"

# PERF
perf = { level = "deny", priority = -1 }

# CARGO
cargo = { level = "deny", priority = -1 }
cargo_common_metadata = "allow"

# NURSERY
nursery = { level = "deny", priority = -1 }
# PEDANTIC
pedantic = { level = "deny", priority = -1 }
# only 32 bit ARM
cast_possible_truncation = "allow"
# case by case
must_use_candidate = "allow"
# todo explain
cast_ptr_alignment = "allow"
missing_errors_doc = "allow"
