# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Infineon Technologies AG 2026.

[package]
name = "psc3m5_evk"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "./build.rs"

[dependencies]
cortexm33 = { path = "../../tock/arch/cortex-m33" }
kernel = { path = "../../tock/kernel" }
psc3 = { path = "../../tock/chips/psc3" }
components = { path = "../../tock/boards/components" }

capsules-core = { path = "../../tock/capsules/core" }
capsules-extra = { path = "../../tock/capsules/extra" }
capsules-system = { path = "../../tock/capsules/system" }

psa_veneer_client = { path = "../../spe/psa_veneer_client" }
psa_interface = { path = "../../spe/psa_interface" }

[features]
# Build the kernel with non-secure trustzone world linker layout and linking to veneers.
non_secure_tz = []

[build-dependencies]
tock_build_scripts = { path = "../../tock/boards/build_scripts" }

[lints]
workspace = true
