# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Infineon Technologies AG 2026.

[package]
name = "psc3m5_evk_secure"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "./build.rs"

[dependencies]
cortexm33 = { path = "../../arch/cortex-m33" }
psc3 = { path = "../../chips/psc3" }
tock-cells = {path = "../../libraries/tock-cells" }
spe = { path = "../../libraries/spe" }

[build-dependencies]
tock_build_scripts = { path = "../build_scripts" }

[lints]
workspace = true
