# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Infineon Technologies AG 2026.

[package]
name = "infineon"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]

[lints]
workspace = true
