# SPDX-FileCopyrightText: Infineon Technologies AG
#
# SPDX-License-Identifier: MIT

[package]
name = "psc3"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
infineon = { path = "../../chips/infineon" }
psa_interface = { path = "../../spe/psa_interface" }
spe = { path = "../../spe/spe" }
cortex_m = { package = "cortex_m", path = "../../libraries/cortex_m" }
tock_psc3 = { package = "psc3", path = "../../tock/chips/psc3", default-features = false }
spe_services = { path = "../../spe/spe_services" }

[lints]
workspace = true
