# SPDX-FileCopyrightText: Infineon Technologies AG
#
# SPDX-License-Identifier: MIT

[package]
name = "cortex_m"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tock-registers = { version = "0.10.0", default-features = false, features = [
    "register_types",
] }

[lints]
workspace = true
