
# SPDX-FileCopyrightText: Infineon Technologies AG
#
# SPDX-License-Identifier: MIT

[package]
name = "cose"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
minicbor = { version = "2.2.1", default-features = false }
p256 = { version = "0.13.2", features = [
    "ecdsa",
    "ecdh",
], default-features = false }
sha2 = { version = "0.10.9", default-features = false }
signature = { version = "2.2.0", default-features = false }

[lints]
workspace = true
