# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Infineon Technologies AG 2026.

[package]
name = "psa_veneer_client"
version = "0.1.0"
edition = "2024"

[dependencies]
psa_interface = { path = "../psa_interface" }

[lints]
workspace = true
