# SPDX-FileCopyrightText: Infineon Technologies AG
#
# SPDX-License-Identifier: MIT

[package]
name = "spe"
version.workspace = true
authors.workspace = true
edition.workspace = true


[features]
spm-ipc = []
veneers = []

[dependencies]
minicbor = { version = "2.2.1", default-features = false }
p256 = { version = "0.13.2", features = [
    "ecdsa",
    "ecdh",
], default-features = false }
sha2 = { version = "0.10.9", default-features = false }
signature = { version = "2.2.0", default-features = false }
bytemuck = { version = "1.25.0", features = ["derive"] }
psa_interface = { path = "../psa_interface" }
helpers = { path = "../../libraries/helpers" }
cose = { path = "../../libraries/cose" }
cortex_m = { path = "../../libraries/cortex_m" }

[lints]
workspace = true
