# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Infineon Technologies AG 2026.

[package]
name = "spe_services"
version = "0.1.0"
edition = "2024"

[dependencies]
spe = { path = "../spe" }
minicbor = { version = "2.2.1", default-features = false }
p256 = { version = "0.13.2", features = [
    "ecdsa",
    "ecdh",
], default-features = false }
sha2 = { version = "0.10.9", default-features = false }
signature = { version = "2.2.0", default-features = false }
cortexm33 = { path = "../../tock/arch/cortex-m33" }
bytemuck = { version = "1.25.0", features = ["derive"] }
psa_interface = { path = "../psa_interface" }
helpers = { path = "../../libraries/helpers" }
cose = { path = "../../libraries/cose" }

[lints]
workspace = true
