# SPDX-FileCopyrightText: Infineon Technologies AG
#
# SPDX-License-Identifier: MIT

[package]
name = "musca_b1_secure"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "./build.rs"

[dependencies]
cortex_m = { path = "../../../libraries/cortex_m" }
ruspe_musca_b1 = { package = "musca_b1", path = "../../../chips/musca_b1" }
spe = { path = "../../../spe/spe", features = ["veneers"] }
spe_services = { path = "../../../spe/spe_services" }
psa_interface = { path = "../../../spe/psa_interface" }
helpers = { path = "../../../libraries/helpers" }
bitfield = "0.14.0"
volatile-register = "0.2.2"

[build-dependencies]
board_build_scripts = { path = "../../shared/build_scripts" }

[lints]
workspace = true
