# SPDX-FileCopyrightText: Infineon Technologies AG
#
# SPDX-License-Identifier: MIT

[package]
name = "musca_b1_test_nspe"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "./build.rs"

[dependencies]
cortexm33 = { path = "../../../tock/arch/cortex-m33" }
kernel = { path = "../../../tock/kernel" }
musca_b1 = { path = "../../../tock/chips/musca_b1" }

psa_veneer_client = { path = "../../../spe/psa_veneer_client" }
psa_interface = { path = "../../../spe/psa_interface" }
helpers = { path = "../../../libraries/helpers" }

[features]
default = ["non_secure_tz"]
# Build the kernel with non-secure trustzone world linker layout and linking to veneers.
non_secure_tz = []

[build-dependencies]
tock_build_scripts = { path = "../../../tock/boards/build_scripts" }

[lints]
workspace = true
