# SPDX-FileCopyrightText: Infineon Technologies AG
#
# SPDX-License-Identifier: MIT

[package]
name = "psc3m5_evk_secure_ipc"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "./build.rs"

[dependencies]
tock_psc3 = { package = "psc3", path = "../../../tock/chips/psc3", default-features = false }
ruspe_psc3 = { package = "psc3", path = "../../../chips/psc3" }
cortex_m = { package = "cortex_m", path = "../../../libraries/cortex_m" }
spe = { path = "../../../spe/spe", features = ["spm-ipc", "veneers"] }
spe_services = { path = "../../../spe/spe_services" }
psa_interface = { path = "../../../spe/psa_interface" }
helpers = { path = "../../../libraries/helpers" }

[build-dependencies]
board_build_scripts = { path = "../../shared/build_scripts" }

[lints]
workspace = true
