# SPDX-FileCopyrightText: Infineon Technologies AG
#
# SPDX-License-Identifier: MIT

[package]
name = "psc3m5_evk_test_nspe"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "./build.rs"

[dependencies]
cortex_m = { path = "../../../libraries/cortex_m" }
psc3 = { path = "../../../tock/chips/psc3" }

shared_test_nspe = { path = "../../shared/test_nspe" }
helpers = { path = "../../../libraries/helpers" }

[features]
default = ["non_secure_tz"]
# Build the kernel with non-secure trustzone world linker layout and linking to veneers.
non_secure_tz = []

[build-dependencies]
board_build_scripts = { path = "../../shared/build_scripts" }

[lints]
workspace = true
