# SPDX-FileCopyrightText: Infineon Technologies AG
#
# SPDX-License-Identifier: MIT

[package]
name = "psa_tock_app"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[dependencies]
libtock = { git = "https://www.github.com/tock/libtock-rs" }

[build-dependencies]
libtock_build_scripts = { git = "https://www.github.com/tock/libtock-rs" }
