# SPDX-FileCopyrightText: Infineon Technologies AG
#
# SPDX-License-Identifier: MIT

[package]
name = "tock_psa_app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
libtock = { git = "https://www.github.com/tock/libtock-rs" }

[build-dependencies]
libtock_build_scripts = { git = "https://www.github.com/tock/libtock-rs" }

[features]
default = []
# default = ["test_loop_token"]
# default = ["test_unpriv_spe"]
test_unpriv_spe = []
test_loop_token = []

[lints]
workspace = true
