# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2026.

[package]
name = "musca_b1_tock_kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "./build.rs"

[dependencies]
cortex_m = { path = "../../../../libraries/cortex_m" }
cortexm33 = { path = "../../../../integrations/tock/tock-sub/arch/cortex-m33" }
kernel = { path = "../../../../integrations/tock/tock-sub/kernel" }
# kernel = { path = "../../../../integrations/tock/tock-sub/kernel", features = [
#     "debug_load_processes",
# ] }
musca_b1 = { path = "../../../../integrations/tock/tock-sub/chips/musca_b1" }
components = { path = "../../../../integrations/tock/tock-sub/boards/components" }

capsules-core = { path = "../../../../integrations/tock/tock-sub/capsules/core" }
capsules-extra = { path = "../../../../integrations/tock/tock-sub/capsules/extra" }
capsules-system = { path = "../../../../integrations/tock/tock-sub/capsules/system" }

psa_veneer_client = { path = "../../../../spe/psa_veneer_client" }
psa_interface = { path = "../../../../spe/psa_interface" }

enum_primitive = { path = "../../../../integrations/tock/tock-sub/libraries/enum_primitive" }
tock_spe_mutex = { path = "../../../../integrations/tock/tock_spe_mutex" }

[features]
default = ["non_secure_tz"]
# Build the kernel with non-secure trustzone world linker layout and linking to veneers.
non_secure_tz = []

[build-dependencies]
tock_build_scripts = { path = "../../../../integrations/tock/tock-sub/boards/build_scripts" }

[lints]
workspace = true
