# SPDX-FileCopyrightText: Infineon Technologies AG
#
# SPDX-License-Identifier: MIT

[package]
name = "attest_srv"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "./build.rs"

[dependencies]
ruspe_psc3 = { package = "psc3", path = "../../../../chips/psc3" }
spe = { path = "../../../../spe/spe" }
spe_services = { path = "../../../../spe/spe_services" }
psa_interface = { path = "../../../../spe/psa_interface" }
helpers = { path = "../../../../libraries/helpers" }

[build-dependencies]
tock_build_scripts = { path = "../../../../tock/boards/build_scripts" }

[lints]
workspace = true
