# SPDX-FileCopyrightText: Infineon Technologies AG
#
# SPDX-License-Identifier: MIT

[package]
name = "psc3m5_evk_attest_srv"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "./build.rs"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
ruspe_psc3 = { package = "psc3", path = "../../../../chips/psc3" }
spe = { path = "../../../../spe/spe", features = ["spm-ipc"] }
spe_services = { path = "../../../../spe/spe_services" }
psa_interface = { path = "../../../../spe/psa_interface" }
helpers = { path = "../../../../libraries/helpers" }

[build-dependencies]
board_build_scripts = { path = "../../../shared/build_scripts" }

[lints]
workspace = true
