# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Infineon Technologies AG 2026.

[package]
name = "psc3m5_evk_tock_kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "./build.rs"

[dependencies]
cortex_m = { path = "../../../../libraries/cortex_m" }
cortexm33 = { path = "../../../../tock/arch/cortex-m33" }
kernel = { path = "../../../../tock/kernel" }
# kernel = { path = "../../../../tock/kernel", features = ["debug_load_processes"] }
psc3 = { path = "../../../../tock/chips/psc3" }
components = { path = "../../../../tock/boards/components" }

capsules-core = { path = "../../../../tock/capsules/core" }
capsules-extra = { path = "../../../../tock/capsules/extra" }
capsules-system = { path = "../../../../tock/capsules/system" }

psa_veneer_client = { path = "../../../../spe/psa_veneer_client" }
psa_interface = { path = "../../../../spe/psa_interface" }

enum_primitive = { path = "../../../../tock/libraries/enum_primitive" }
tock_spe_adapter = { path = "../../../../integrations/tock/tock_spe_adapter" }

[features]
default = ["non_secure_tz"]
# Build the kernel with non-secure trustzone world linker layout and linking to veneers.
non_secure_tz = []

[build-dependencies]
tock_build_scripts = { path = "../../../../tock/boards/build_scripts" }

[lints]
workspace = true
